--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Meal</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/home.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <table id="results">
         </table>
     </div>
-    <script src="./script/script.js"></script>
+    <script type="module" src="./script/home.js"></script>
 </body>
 
 </html>
