Enhanced features for homepage and favorite page

--- a/favorite_list.html
+++ b/favorite_list.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/favorite.css">
-    <title>Favorite Meals</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/favorite.css">
+  <title>Favorite Meals</title>
 </head>
-<body>  
-    <h1>My Favorite Meals</h1>
-    <ul id="list">
-      </ul>
-    <script type="module" src="./script/favorite.js"></script>
+
+<body>
+  <h1>My Favorite Meals</h1>
+  <ul id="list">
+  </ul>
+  <a href="./index.html">Back to HomePage</a>
+  <script type="module" src="./script/favorite.js"></script>
 </body>
+
 </html>
