--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <table id="results">
         </table>
     </div>
+    <a id="favlink" href="./favorite_list.html">Favorite Meal List</a>
     <script type="module" src="./script/home.js"></script>
 </body>
 
