added some responsiveness for homepage

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="searchTitle">
             <h2>Meal Search</h2>
         </div>  
-        <img id="searchIcon" src="./media/search.svg" />
+        <!-- <img id="searchIcon" src="./media/search.svg" /> -->
         <input type="text" placeholder="Enter to Search" id="searchInput">
         <div id="resultItems">
             <table id="results">
