some responsiveness added for meal page

--- a/meal.html
+++ b/meal.html
@@ -11,8 +11,8 @@
 
 <body>
     <div class="box">
-        <h1 id="mealHeading"></h1><br>
-        <img id="strMealThumb"><br>
+        <h1 id="mealHeading"></h1>
+        <img id="strMealThumb">
         <table>
             <tr>
                 <td class="col1"><span class="key">Meal ID : </span></td>
@@ -43,13 +43,10 @@
                 <td><a class="value" id="strSource">Click here to visit</a></td>
             </tr>
         </table>
-        <br><br>
-        <!-- <span class="key">Meal ID : </span><span id = "idMeal"></span><br>
-        <span class="key">Meal Category : </span><span id = "strCategory"></span><br>
-        <span class="key">Serve Area : </span><span id = "strArea"></span><br> -->
         <div id="instrn">
-            <span class="key">Instructions : </span><span class="value" id="strInstructions"></span><br>
+            <span class="key">Instructions : </span><span class="value" id="strInstructions"></span>
         </div>
+    </div>
         <a id="homeLink" href="./index.html">Back to HomePage</a>
         <script src="./script/meal.js"></script>
 </body>
