--- a/favorite_list.html
+++ b/favorite_list.html
@@ -12,8 +12,10 @@
 
 <body>
   <h1>My Favorite Meals</h1>
+  <!-- list for display all meals added in fav list -->
   <ul id="list">
   </ul>
+  <!-- link for getting back to HomePage -->
   <a href="./index.html">Back to HomePage</a>
   <script type="module" src="./script/favorite.js"></script>
 </body>
