--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
     <div class="box">
         <div id="searchTitle">
             <h2>Meal Search</h2>
-        </div>  
-        <!-- <img id="searchIcon" src="./media/search.svg" /> -->
+        </div>
+        <!-- element for search input -->
         <input type="text" placeholder="Enter to Search" id="searchInput">
         <div id="resultItems">
+            <!-- below table will use to show all search results -->
             <table id="results">
             </table>
         </div>
+        <!-- link for visiting all favorite items -->
         <button id="favlink" onclick='window.location="./favorite_list.html"'>Favorite List</button>
     </div>
-    <!-- <a id="favlink" href="./favorite_list.html">Favorite Meal List</a> -->
     <script type="module" src="./script/home.js"></script>
 </body>
 
