--- a/meal.html
+++ b/meal.html
@@ -11,8 +11,11 @@
 
 <body>
     <div class="box">
+        <!-- heading will display meal name -->
         <h1 id="mealHeading"></h1>
+        <!-- thumbNail will display meal pic -->
         <img id="strMealThumb">
+        <!-- table will display the more details for meal -->
         <table>
             <tr>
                 <td class="col1"><span class="key">Meal ID : </span></td>
@@ -43,10 +46,12 @@
                 <td><a class="value" id="strSource">Click here to visit</a></td>
             </tr>
         </table>
+        <!-- div will display Instructions and ingredients to prepare the meal -->
         <div id="instrn">
             <span class="key">Instructions : </span><span class="value" id="strInstructions"></span>
         </div>
     </div>
+        <!-- link for getting back to meal search -->
         <a id="homeLink" href="./index.html">Back to HomePage</a>
         <script src="./script/meal.js"></script>
 </body>
